--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "css-loader": "^6.7.1",
     "express": "^4.18.2",
     "node-fetch": "^3.2.10",
