--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mui/icons-material": "^5.10.9",
     "cookie-parser": "^1.4.6",
     "css-loader": "^6.7.1",
     "express": "^4.18.2",
